--- a/vignettes/ParallelPlots.Rmd
+++ b/vignettes/ParallelPlots.Rmd
@@ -199,6 +199,23 @@ genoPlotR::plot_gene_map(dsList, compList, dna_seg_scale=TRUE)
 
 ```
 
+# Other species
+
+## Ciona
+
+```{r Ciona_Ply_Ros_chr1}
+plotApairOfChrs(coa2$Ply_Ros, "BNJZ01000001.1", main = "Ciona intestinalis Plymouth vs Roscoff")
+```
+
+```{r Ciona_Ply_Rob_chr1}
+plotApairOfChrs(coa2$Ply_Rob, "BNJZ01000001.1", main = "Ciona intestinalis Plymouth vs Ciona robusta")
+```
+
+Unfortunately, _C. savignyi_'s genome assembly is too fragmented.  Here is a plot with the largest fragment.
+
+```{r Ciona_Ply_Sav_chr1}
+plotApairOfChrs(coa2$Ply_Sav, "BNJZ01000001.1", main = "Ciona intestinalis Plymouth vs Ciona savigny")
+```
 
 # Session information
 
