--- a/vignettes/CoalescingCutoffs.Rmd
+++ b/vignettes/CoalescingCutoffs.Rmd
@@ -40,47 +40,6 @@ library('viridis')
 (genomes <- OikScrambling:::loadAllGenomes())
 (load("BreakPoints.Rdata"))
 ```
-
-### Phylogenetic cladogram
-
-
-```{r setting_up_functions, fig.height=4, fig.width=6, dev="svg"}
-requireNamespace("ade4")
-treeLeaf <- function(name, length=NULL) {
-  if(!is.null(length)) length <- paste0(':', length)
-  paste0(name, length)
-}
-
-treeNode <- function(branch1, branch2, length = NULL) {
-  if(!is.null(length)) length <- paste0(':', length)
-  paste0('(', branch1, ',', branch2, ')', length)
-}
-
-addRoot <- function(branch)  paste0(branch, ";")
-
-tree <-
-  addRoot(
-    treeNode(
-      treeNode( length = 2,
-        treeLeaf("Okinawa", 1),
-        treeLeaf("Kume", 1)
-      ),
-      treeNode( length = 1,
-        treeNode( length = 1,
-          treeLeaf("Osaka", 1),
-          treeLeaf("Aomori", 1)
-        ),
-        treeNode( length =1,
-          treeLeaf("Norway", 1),
-          treeLeaf("Barcelona", 1)
-        )
-      )
-    )
-  )
-
-
-```
-
 ### Generating coalesced alignments
 
 The function `coalest_contigs()` is the primary driver of our synteny analysis. It accepts an argument, `minwidth`, which controls the minimum width of segments to be considered for synteny analyses.
@@ -104,17 +63,29 @@ syntenic regions are, and so on.
 ```{r coa_cutoffs_2}
 # You can then make a simple table that tabulates the number of segments at a number of cutoffs.
 cutoff_coas_tables = SimpleList()
-# Count number of segments.
-cutoff_coas_tables$NumSegments <- as.data.frame(do.call(rbind, lapply(cutoff_coas, function(cutoff) sapply(cutoff, function(gb) as.integer(length(gb)) ))))
+# Count number of segments. We make 0-count cells to NA to make them more obvious in the heatmap later.
+cutoff_coas_tables$NumSegments <- do.call(rbind, lapply(cutoff_coas, function(cutoff) {
+  sapply(cutoff, function(gb) {
+    num_segments = as.integer(length(gb))
+    if(num_segments==0){
+      num_segments = NA
+    }
+    num_segments
+    })
+  })
+) |> as.data.frame()
 # Show how many total bases are left after coalescing.
-# I divide by 1,000,000 to convert it to Mbp here.
-cutoff_coas_tables$TotalAligned <- as.data.frame(do.call(rbind, lapply(cutoff_coas, function(cutoff) {
+# Divide by 1,000,000 to convert it to Mbp. 0-counts are converted to NA.
+cutoff_coas_tables$TotalAligned <- do.call(rbind, lapply(cutoff_coas, function(cutoff) {
   cut_gb <- sapply(cutoff, function(gb) {
     total <- sum(width(gb))/1000000
+    if(total==0){
+      total=NA
+    }
     total
   })
   cut_gb
-})))
+})) |> as.data.frame()
 # Show largest segment. Combine it with the query name to see which chromosome segment is biggest.
 cutoff_coas_tables$LargestSegment <- as.data.frame(do.call(rbind, lapply(cutoff_coas, function(cutoff) {
   cut_gb <- sapply(names(cutoff), function(sp_pair) {
@@ -179,34 +150,166 @@ cutoff_coas_tables$PercentOriginalAlignment <- do.call(rbind, apply(cutoff_coas_
 
 ```
 
+Note the names of the largest segments.
+
+```{r coa_cutoffs_3}
+(cutoff_coas_tables$LargestSegmentName)
+```
+
+
 ### Plotting features at different cutoffs
 ##### Number of segments
 ```{r coa_cutoff_numSegs, fig.height=6, fig.width=8, dev="svg"}
 # Number of segments
-pheatmap(cutoff_coas_tables$NumSegments, col=magma(100), cluster_cols=F, cluster_row=F, gaps_col=15, angle_col = 90, main='Number of alignments (uncoalesced) or syntenic regions (coalesced)', display_numbers=T, number_color='#d9d9d9', number_format="%.0f")
+pheatmap(cutoff_coas_tables$NumSegments, col=magma(100), cluster_cols=F, cluster_row=F, gaps_col=15, angle_col = 90, main='Number of alignments (uncoalesced) or syntenic regions (coalesced)', display_numbers=T, number_color='#d9d9d9', number_format="%.0f", fontsize_number=6)
 ```
 ##### Total aligned
 ```{r coa_cutoff_totAli, fig.height=6, fig.width=8, dev="svg"}
-pheatmap(cutoff_coas_tables$TotalAligned, col=magma(100), cluster_cols=F, gaps_col=15, cluster_row=F, angle_col = 90, main='Sum of all alignment widths (Mbp)', display_numbers=T, number_color='#d9d9d9')
+pheatmap(cutoff_coas_tables$TotalAligned, col=magma(100), cluster_cols=F, gaps_col=15, cluster_row=F, angle_col = 90, main='Sum of all alignment widths (Mbp)', display_numbers=T, number_color='#d9d9d9', number_format="%.0f", fontsize_number=6)
 ```
 
 ##### Largest segment
 ```{r coa_cutoff_lrgstSeg, fig.height=6, fig.width=8, dev="svg"}
-pheatmap(cutoff_coas_tables$LargestSegment, col=magma(100), cluster_cols=F, gaps_col=15, cluster_row=F, angle_col = 90, main='Size of largest segment (Mbp)', display_numbers=T, number_color='#d9d9d9')
+pheatmap(cutoff_coas_tables$LargestSegment, col=magma(100), cluster_cols=F, gaps_col=15, cluster_row=F, angle_col = 90, main='Size of largest segment (Mbp)', display_numbers=T, number_color='#d9d9d9', number_format="%.0f", fontsize_number=6)
 ```
 
 ##### Percent of genome covered by alignments
 Note the denominator here is the mean of the query and target genome sizes.
 ```{r coa_cutoff_pctGen, fig.height=6, fig.width=8, dev="svg"}
-pheatmap(cutoff_coas_tables$PercentGenomeCovered, col=magma(100), cluster_cols=F, gaps_col=15, cluster_row=F, angle_col = 90, main='Percentage of query/target genomes covered (%)', display_numbers=T, number_color='#d9d9d9')
+pheatmap(cutoff_coas_tables$PercentGenomeCovered, col=magma(100), cluster_cols=F, gaps_col=15, cluster_row=F, angle_col = 90, main='Percentage of query/target genomes covered (%)', display_numbers=T, number_color='#d9d9d9', number_format="%.0f", fontsize_number=6)
 ```
 
 ##### Percent of total aligned positions represented in alignments
 Note the denominator here is the mean of the query and target genome sizes.
 ```{r coa_cutoff_pctOrig, fig.height=6, fig.width=8, dev="svg"}
-pheatmap(cutoff_coas_tables$PercentOriginalAlignment, col=magma(100), cluster_cols=F, gaps_col=15, cluster_row=F, angle_col = 90, main='Percentage of query/target genomes covered (%)', display_numbers=T, number_color='#d9d9d9')
+pheatmap(cutoff_coas_tables$PercentOriginalAlignment, col=magma(100), cluster_cols=F, gaps_col=15, cluster_row=F, angle_col = 90, main='Percentage of originally-aligned positions covered (%)', display_numbers=T, number_color='#d9d9d9', number_format="%.0f", fontsize_number=6)
 ```
 
+
+### The effect of coalescing cutoffs on synteny
+
+Now let's make some chromosome plots. Here are the original Okinawa-Osaka alignments, with no coalescing.
+
+```{r coa_cutoff_chrPlot_1, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$uncoalesced$Oki_Osa, 'chr1')
+```
+
+You can see many details here, including the huge number of small alignments. Many of these are removed by coalescing:
+
+```{r coa_cutoff_chrPlot_2, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$coa_minWidth_0$Oki_Osa, 'chr1')
+```
+
+However, many small alignments persist after coalescing. As seen above, applying length filters to remove small alignments can drastically reduce the number of segments - or in other words, greatly increase the contiguity of the coalesced alignments.
+
+Here is the result of removing alignments below 250bp - a fairly conservative threshold:
+
+```{r coa_cutoff_chrPlot_3, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$coa_minWidth_250$Oki_Osa, 'chr1')
+```
+
+And if we go too far, we lose too much information for it to be useful:
+
+```{r coa_cutoff_chrPlot_4, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$coa_minWidth_10000$Oki_Osa, 'chr1')
+```
+
+#### Using "maximal coverage of query/target genomes" as the selector
+For the following plots, I use my own arbitrary choices to select a cutoff for each pair that balances retaining as much information as possible with the largest possible synteny. I select the cutoff that maximizes the total coverage of the pair - the maximum "Sum of all alignment widths" cell from the heatmap above.
+
+###### Okinawa-Osaka
+```{r coa_cutoff_chrPlot_5, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$coa_minWidth_250$Oki_Osa, 'chr1')
+```
+```{r coa_cutoff_chrPlot_6, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$coa_minWidth_250$Oki_Osa, 'chr2')
+```
+```{r coa_cutoff_chrPlot_7, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$coa_minWidth_250$Oki_Osa, 'PAR')
+```
+
+###### Okinawa-Barcelona
+```{r coa_cutoff_chrPlot_8, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$coa_minWidth_100$Oki_Bar, 'chr1')
+```
+```{r coa_cutoff_chrPlot_9, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$coa_minWidth_100$Oki_Bar, 'chr2')
+```
+```{r coa_cutoff_chrPlot_10, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$coa_minWidth_100$Oki_Bar, 'PAR')
+```
+
+###### Osaka-Barcelona
+```{r coa_cutoff_chrPlot_11, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$coa_minWidth_250$Osa_Bar, 'Chr1')
+```
+```{r coa_cutoff_chrPlot_12, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$coa_minWidth_250$Osa_Bar, 'Chr2')
+```
+```{r coa_cutoff_chrPlot_13, fig.height=4, fig.width=6, dev="svg"}
+plotApairOfChrs(cutoff_coas$coa_minWidth_250$Osa_Bar, 'PAR')
+```
+
+###### Okinawa-Kume
+The following is taken from the `vignette("ParallelPlots", package = "OikScrambling")` vignette. It is invoked here to allow later plots between Okinawa and Kume.
+
+```{r setting_up_functions, fig.height=4, fig.width=6, dev="svg"}
+requireNamespace("ade4")
+treeLeaf <- function(name, length=NULL) {
+  if(!is.null(length)) length <- paste0(':', length)
+  paste0(name, length)
+}
+
+treeNode <- function(branch1, branch2, length = NULL) {
+  if(!is.null(length)) length <- paste0(':', length)
+  paste0('(', branch1, ',', branch2, ')', length)
+}
+
+addRoot <- function(branch)  paste0(branch, ";")
+
+tree <-
+  addRoot(
+    treeNode(
+      treeNode( length = 2,
+        treeLeaf("Okinawa", 1),
+        treeLeaf("Kume", 1)
+      ),
+      treeNode( length = 1,
+        treeNode( length = 1,
+          treeLeaf("Osaka", 1),
+          treeLeaf("Aomori", 1)
+        ),
+        treeNode( length =1,
+          treeLeaf("Norway", 1),
+          treeLeaf("Barcelona", 1)
+        )
+      )
+    )
+  )
+```
+
+The optimal Okinawa-Kume plot:
+
+```{r coa_cutoff_chrPlot_14, fig.height=4, fig.width=6, dev="svg"}
+# Note that this uses the cutoff coalesced object and not the translocation-removed coa2 object.
+x <- cutoff_coas$coa_minWidth_2000$Oki_Kum
+x[seqnames(x$query) == "contig_90_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_90_1"])
+x[seqnames(x$query) == "contig_88_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_88_1"])
+x$query <- mergeSeqLevels(x$query, c("contig_27_1", "contig_90_1", "contig_3_1", "contig_88_1"), "new_scaffold")
+
+plotApairOfChrs(x, 'chr1', dna_seg_scale = TRUE)
+```
+
+Note that when you try to increase this further, you begin losing many regions:
+
+```{r coa_cutoff_chrPlot_15, fig.height=4, fig.width=6, dev="svg"}
+x <- cutoff_coas$coa_minWidth_10000$Oki_Kum
+x[seqnames(x$query) == "contig_90_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_90_1"])
+x[seqnames(x$query) == "contig_88_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_88_1"])
+x$query <- mergeSeqLevels(x$query, c("contig_27_1", "contig_90_1", "contig_3_1", "contig_88_1"), "new_scaffold")
+
+plotApairOfChrs(x, 'chr1', dna_seg_scale = TRUE)
+```
 
 # Session information
 
